# checkbox-state-machine

./: Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml  init.yml
src/: main.rs
