[package]
name = "statemachine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace"] }
bitvec = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
